task: swap assets

--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 <body>
 
   <div class="main-content">
-    <header class="fade-in-up">
-      <h1>
-        <span class="light block">2025</span>
-        <span class="light block">Scala <span class="bold">Days</span></span>
-      </h1>
-      <p class="extra-light block">19 &ndash; 22 August</p>
-      <p class="extra-light block">Lausanne, Switzerland</p>
+    <header class="title fade-in-up">
+      <a href="index.html">
+        <img src="resources/icons/ScalaDays.svg" alt="title" />
+      </a>
     </header>
 
     <section class="hero fade-in-up">
@@ -45,7 +42,7 @@
           <div class="newsletter">
             <p><strong>Signup for a newsletter</strong></p>
             <button class="round-btn">
-              &rarr;
+              <img src="resources/icons/button.svg" alt="button" />
             </button>
           </div>
         </div>
@@ -60,6 +57,11 @@
       <li>
         <a href="#">
           <img src="resources/icons/mastodon.svg" alt="Mastodon" />
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="resources/icons/bsky.svg" alt="Bsky" />
         </a>
       </li>
       <li>
