--- a/index.html
+++ b/index.html
@@ -41,9 +41,33 @@
 
           <div class="newsletter">
             <p><strong>Signup for a newsletter</strong></p>
-            <button class="round-btn">
-              <img src="resources/icons/button.svg" alt="button" />
-            </button>
+            <div id="mc_embed_shell">
+              <link href="/elements/newsletter.css" rel="stylesheet">
+              <div id="mc_embed_signup">
+                <form
+                  action="https://scaladays.us20.list-manage.com/subscribe/post?u=7cd6b730ca5a735336c7b144c&amp;id=ef99d45de2&amp;f_id=00185feef0"
+                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                  target="_blank">
+                  <div id="mc_embed_signup_scroll">
+                    <div class="mc-field-group">
+                      <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" placeholder="Email Address" value="">
+                    </div>
+                    <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display: none;"></div>
+                      <div class="response" id="mce-success-response" style="display: none;"></div>
+                    </div>
+                    <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
+                        name="b_7cd6b730ca5a735336c7b144c_ef99d45de2" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                        value=&#x279C;></div>
+                  </div>
+                </form>
+              </div>
+              <script type="text/javascript"
+                src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+              <script
+                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+            </div>
           </div>
         </div>
       </div>
@@ -52,7 +76,7 @@
 
   <!-- Footer / Social Links -->
   <footer class="fade-in-up">
-    <p>Follow us on</p>
+    <p class="follow-text">Follow us on</p>
     <ul class="social-icons">
       <li>
         <a href="#">
@@ -60,7 +84,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://bsky.app/profile/scaladays.org">
           <img src="resources/icons/bsky.svg" alt="Bsky" />
         </a>
       </li>
