--- a/index.html
+++ b/index.html
@@ -11,65 +11,65 @@
 
 <body>
 
-    <div class="main-content">
-      <header class="title fade-in-up">
-        <a href="index.html">
-          <img src="resources/icons/ScalaDays.svg" alt="title" />
-        </a>
-      </header>
-  
-      <section class="hero fade-in-up">
-        <div class="hero-background"></div>
-      </section>
-  
-      <section class="widget-section fade-in-up">
-        <div id="ticket-widget">
-          <div class="ticket-widget">
-            <ul>
-              <li>Ticket sales open soon</li>
-              <li>
-                <strong>Get in touch</strong><br />
-                for sponsorship<br />
-                opportunities
-              </li>
-            </ul>
-  
-            <hr class="separator" />
-  
-            <div class="newsletter">
-              <p><strong>Sign up for updates</strong></p>
-              <div id="mc_embed_shell">
-                <link href="/elements/newsletter.css" rel="stylesheet">
-                <div id="mc_embed_signup">
-                  <form
-                    action="https://scaladays.us20.list-manage.com/subscribe/post?u=7cd6b730ca5a735336c7b144c&amp;id=ef99d45de2&amp;f_id=00185feef0"
-                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                    target="_blank">
-                    <div id="mc_embed_signup_scroll">
-                      <div class="mc-field-group">
-                        <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" placeholder="Email Address" value="">
-                      </div>
-                      <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display: none;"></div>
-                        <div class="response" id="mce-success-response" style="display: none;"></div>
-                      </div>
-                      <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
-                          name="b_7cd6b730ca5a735336c7b144c_ef99d45de2" tabindex="-1" value=""></div>
-                      <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                          value=&#x279C;></div>
+  <div class="main-content">
+    <header class="title fade-in-up">
+      <a href="index.html">
+        <img src="resources/icons/ScalaDays.svg" alt="title" />
+      </a>
+    </header>
+
+    <section class="hero fade-in-up">
+      <div class="hero-background"></div>
+    </section>
+
+    <section class="widget-section fade-in-up">
+      <div id="ticket-widget">
+        <div class="ticket-widget">
+          <ul>
+            <li>Ticket sales open soon</li>
+            <li>
+              <strong>Get in touch</strong><br />
+              for sponsorship<br />
+              opportunities
+            </li>
+          </ul>
+
+          <hr class="separator" />
+
+          <div class="newsletter">
+            <p><strong>Signup for a newsletter</strong></p>
+            <div id="mc_embed_shell">
+              <link href="/elements/newsletter.css" rel="stylesheet">
+              <div id="mc_embed_signup">
+                <form
+                  action="https://scaladays.us20.list-manage.com/subscribe/post?u=7cd6b730ca5a735336c7b144c&amp;id=ef99d45de2&amp;f_id=00185feef0"
+                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                  target="_blank">
+                  <div id="mc_embed_signup_scroll">
+                    <div class="mc-field-group">
+                      <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" placeholder="Email Address" value="">
                     </div>
-                  </form>
-                </div>
-                <script type="text/javascript"
-                  src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-                <script
-                  type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                    <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display: none;"></div>
+                      <div class="response" id="mce-success-response" style="display: none;"></div>
+                    </div>
+                    <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
+                        name="b_7cd6b730ca5a735336c7b144c_ef99d45de2" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                        value=&#x279C;></div>
+                  </div>
+                </form>
               </div>
+              <script type="text/javascript"
+                src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+              <script
+                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
             </div>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
+  </div>
 
   <!-- Footer / Social Links -->
   <footer class="fade-in-up">
