Revert "Update the background"

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scala Days | 2025 Edition</title>
+  <title>2025 Scala Days</title>
+  <!-- Global Styles -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Widget Styles -->
   <link rel="stylesheet" href="elements/widget.css" />
 </head>
 
