extract mailchimp scripts

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="newsletter">
             <p><strong>Signup for a newsletter</strong></p>
             <div id="mc_embed_shell">
-              <link href="/elements/newsletter.css" rel="stylesheet">
+              <link href="elements/newsletter.css" rel="stylesheet">
               <div id="mc_embed_signup">
                 <form
                   action="https://scaladays.us20.list-manage.com/subscribe/post?u=7cd6b730ca5a735336c7b144c&amp;id=ef99d45de2&amp;f_id=00185feef0"
@@ -63,10 +63,19 @@
                   </div>
                 </form>
               </div>
-              <script type="text/javascript"
-                src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-              <script
-                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+              <script type="text/javascript" src="assets/js/mc-validate.js"></script>
+              <script type="text/javascript">
+                (function ($) { 
+                  window.fnames = new Array(); 
+                  window.ftypes = new Array(); 
+                  fnames[0] = 'EMAIL'  ; ftypes[0] = 'email'; 
+                  fnames[1] = 'FNAME'  ; ftypes[1] = 'text'; 
+                  fnames[2] = 'LNAME'  ; ftypes[2] = 'text'; 
+                  fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; 
+                  fnames[4] = 'PHONE'  ; ftypes[4] = 'phone'; 
+                  }(jQuery)); 
+                var $mcj = jQuery.noConflict(true);
+              </script>
             </div>
           </div>
         </div>
