chore: first draft of icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
   <!-- Widget Styles -->
   <link rel="stylesheet" href="elements/widget.css" />
+  <!-- ICONS -->
+  <link rel="shortcut icon"                href="assets/images/round-02.png">
+  <link rel="apple-touch-icon-precomposed" href="assets/images/round-02.png">
+  <link rel="icon"                         href="assets/images/round-02.png">
+  <link rel="apple-touch-icon"             href="assets/images/round-02.png">
 </head>
 
 <body>
