--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>2025 Scala Days</title>
-  <!-- Global Styles -->
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Widget Styles -->
-  <link rel="stylesheet" href="elements/widget.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
   <!-- ICONS -->
   <link rel="shortcut icon"                href="assets/images/round-02.png">
   <link rel="apple-touch-icon-precomposed" href="assets/images/round-02.png">
@@ -36,8 +32,8 @@
           <ul>
             <li>Ticket sales open soon</li>
             <li>
-              <strong>Get in touch</strong><br />
-              for sponsorship<br />
+              <strong>Get in touch</strong><br/>
+              for sponsorship<br/>
               opportunities
             </li>
           </ul>
@@ -47,11 +43,12 @@
           <div class="newsletter">
             <p><strong>Signup for a newsletter</strong></p>
             <div id="mc_embed_shell">
-              <link href="elements/newsletter.css" rel="stylesheet">
               <div id="mc_embed_signup">
                 <form
                   action="https://scaladays.us20.list-manage.com/subscribe/post?u=7cd6b730ca5a735336c7b144c&amp;id=ef99d45de2&amp;f_id=00185feef0"
-                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                  method="post" id="mc-embedded-subscribe-form" 
+                  name="mc-embedded-subscribe-form" 
+                  class="validate"
                   target="_blank">
                   <div id="mc_embed_signup_scroll">
                     <div class="mc-field-group">
@@ -61,10 +58,12 @@
                       <div class="response" id="mce-error-response" style="display: none;"></div>
                       <div class="response" id="mce-success-response" style="display: none;"></div>
                     </div>
-                    <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
-                        name="b_7cd6b730ca5a735336c7b144c_ef99d45de2" tabindex="-1" value=""></div>
-                    <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                        value=&#x279C;></div>
+                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                      <input type="text"name="b_7cd6b730ca5a735336c7b144c_ef99d45de2" tabindex="-1" value="">
+                    </div>
+                    <div class="clear">
+                      <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"value=&#x279C;>
+                    </div>
                   </div>
                 </form>
               </div>
