chore: drop resources folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="main-content">
     <header class="title fade-in-up">
       <a href="index.html">
-        <img src="resources/icons/ScalaDays.svg" alt="title" />
+        <img src="assets/images/hero.svg" alt="title" />
       </a>
     </header>
 
@@ -93,22 +93,22 @@
     <ul class="social-icons">
       <li>
         <a href="#">
-          <img src="resources/icons/mastodon.svg" alt="Mastodon" />
+          <img src="assets/images/icon-mastodon.svg" alt="Mastodon" />
         </a>
       </li>
       <li>
         <a href="https://bsky.app/profile/scaladays.org">
-          <img src="resources/icons/bsky.svg" alt="Bsky" />
+          <img src="assets/images/icon-bsky.svg" alt="Bsky" />
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="resources/icons/discord.svg" alt="Discord" />
+          <img src="assets/images/icon-discord.svg" alt="Discord" />
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="resources/icons/linkedin.svg" alt="LinkedIn" />
+          <img src="assets/images/icon-linkedin.svg" alt="LinkedIn" />
         </a>
       </li>
     </ul>
