chore: Add socials + don't make the hero section clickable

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
   <div class="main-content">
     <header class="title fade-in-up">
-      <a href="index.html">
-        <img src="assets/images/hero.svg" alt="title" />
-      </a>
+      <img src="assets/images/hero.svg" alt="title" />
     </header>
 
     <section class="hero fade-in-up">
@@ -92,7 +90,7 @@
     <p class="follow-text">Follow us on</p>
     <ul class="social-icons">
       <li>
-        <a href="#">
+        <a href="https://mastodon.social/@scaladays">
           <img src="assets/images/icon-mastodon.svg" alt="Mastodon" />
         </a>
       </li>
@@ -102,12 +100,12 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://discord.com/invite/scala">
           <img src="assets/images/icon-discord.svg" alt="Discord" />
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.linkedin.com/company/scala-center">
           <img src="assets/images/icon-linkedin.svg" alt="LinkedIn" />
         </a>
       </li>
