chore: restructure the html

--- a/index.html
+++ b/index.html
@@ -14,16 +14,10 @@
 </head>
 
 <body>
-
-  <div class="main-content">
-    <header class="title fade-in-up">
-      <img src="assets/images/hero.svg" alt="title" />
-    </header>
-
-    <section class="hero fade-in-up">
-      <div class="hero-background"></div>
-    </section>
-
+  <header class="title fade-in-up">
+    <img src="assets/images/hero.svg" alt="title" />
+  </header>
+  <main>
     <section class="widget-section fade-in-up">
       <div id="ticket-widget">
         <div class="ticket-widget">
@@ -83,9 +77,7 @@
         </div>
       </div>
     </section>
-  </div>
-
-  <!-- Footer / Social Links -->
+  </main>
   <footer class="fade-in-up">
     <p class="follow-text">Follow us on</p>
     <ul class="social-icons">
@@ -111,7 +103,6 @@
       </li>
     </ul>
   </footer>
-
 </body>
 
 </html>
