chore: switch from section to article

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="assets/images/hero.svg" alt="title" />
   </header>
   <main>
-    <section class="widget-section fade-in-up">
+    <article class="widget-section fade-in-up">
       <div id="ticket-widget">
         <div class="ticket-widget">
           <ul>
@@ -76,7 +76,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </article>
   </main>
   <footer class="fade-in-up">
     <p class="follow-text">Follow us on</p>
