--- a/index.html
+++ b/index.html
@@ -79,29 +79,15 @@
     </article>
   </main>
   <footer class="fade-in-up">
-    <p class="follow-text">Follow us on</p>
-    <ul class="social-icons">
-      <li>
-        <a href="https://mastodon.social/@scaladays">
-          <img src="assets/images/icon-mastodon.svg" alt="Mastodon" />
-        </a>
-      </li>
-      <li>
-        <a href="https://bsky.app/profile/scaladays.org">
-          <img src="assets/images/icon-bsky.svg" alt="Bsky" />
-        </a>
-      </li>
-      <li>
-        <a href="https://discord.com/invite/scala">
-          <img src="assets/images/icon-discord.svg" alt="Discord" />
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/company/scala-center">
-          <img src="assets/images/icon-linkedin.svg" alt="LinkedIn" />
-        </a>
-      </li>
-    </ul>
+    <div>
+      <span class="follow-text">Follow us on</span>
+      <div class="social-icons">
+        <a href="https://mastodon.social/@scaladays"><img src="assets/images/icon-mastodon.svg" alt="Mastodon"/></a>
+        <a href="https://bsky.app/profile/scaladays.org"><img src="assets/images/icon-bsky.svg" alt="Bsky"/></a>
+        <a href="https://discord.com/invite/scala"><img src="assets/images/icon-discord.svg" alt="Discord"/></a>
+        <a href="https://www.linkedin.com/company/scala-center"><img src="assets/images/icon-linkedin.svg" alt="LinkedIn"/></a>
+      </div>
+    </div>
   </footer>
 </body>
 
