--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <hr class="separator" />
 
           <div class="newsletter">
-            <p><strong>Sign up for updates</strong></p>
+            <p><strong>Signup for a newsletter</strong></p>
             <div id="mc_embed_shell">
               <div id="mc_embed_signup">
                 <form
