chore: change the title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>2025 Scala Days</title>
+  <title>Scala Days 2025</title>
   <link rel="stylesheet" href="assets/css/main.css" />
   <!-- ICONS -->
   <link rel="shortcut icon"                href="assets/images/round-02.png">
