--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>Scala Days 2025</title>
   <link rel="stylesheet" href="assets/css/main.css" />
   <!-- ICONS -->
-  <link rel="shortcut icon"                href="assets/images/round-02.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/images/round-02.png">
-  <link rel="icon"                         href="assets/images/round-02.png">
-  <link rel="apple-touch-icon"             href="assets/images/round-02.png">
+  <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <link rel="manifest" href="site.webmanifest" />
 </head>
 
 <body>
