chore: last changes before announcement

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" />
   <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-  <link rel="manifest" href="site.webmanifest" />
+  <meta name="apple-mobile-web-app-title" content="Scala Days 2025" />
 </head>
 
 <body>
