chore: add link to get in touch

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul>
             <li>Ticket sales open soon</li>
             <li>
-              <strong>Get in touch</strong><br/>
+              <strong><a href="mailto:info@scaladays.org" class="get-in-touch">Get in touch</a></strong><br/>
               for sponsorship<br/>
               opportunities
             </li>
