chore: add tracker

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Scala Days 2025" />
+  <script defer data-domain="scaladays.org" src="https://plausible.scala-lang.org/js/plausible.js"></script>
 </head>
 
 <body>
