--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
   <title>Scala Days 2025</title>
   <link rel="stylesheet" href="assets/css/main.css" />
   <!-- ICONS -->
@@ -21,60 +21,58 @@
   </header>
   <main>
     <article class="widget-section fade-in-up">
-      <div id="ticket-widget">
-        <div class="ticket-widget">
-          <ul>
-            <li>Ticket sales open soon</li>
-            <li>
-              <strong><a href="mailto:info@scaladays.org" class="get-in-touch">Get in touch</a></strong><br/>
-              for sponsorship<br/>
-              opportunities
-            </li>
-          </ul>
+      <div class="ticket-widget">
+        <ul>
+          <li>Ticket sales open soon</li>
+          <li>
+            <strong><a href="mailto:info@scaladays.org" class="get-in-touch">Get in touch</a></strong><br/>
+            for sponsorship<br/>
+            opportunities
+          </li>
+        </ul>
 
-          <hr class="separator" />
+        <hr class="separator" />
 
-          <div class="newsletter">
-            <p><strong>Sign up for updates</strong></p>
-            <div id="mc_embed_shell">
-              <div id="mc_embed_signup">
-                <form
-                  action="https://scaladays.us20.list-manage.com/subscribe/post?u=7cd6b730ca5a735336c7b144c&amp;id=ef99d45de2&amp;f_id=00185feef0"
-                  method="post" id="mc-embedded-subscribe-form" 
-                  name="mc-embedded-subscribe-form" 
-                  class="validate"
-                  target="_blank">
-                  <div id="mc_embed_signup_scroll">
-                    <div class="mc-field-group">
-                      <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" placeholder="Email Address" value="">
-                    </div>
-                    <div id="mce-responses" class="clear">
-                      <div class="response" id="mce-error-response" style="display: none;"></div>
-                      <div class="response" id="mce-success-response" style="display: none;"></div>
-                    </div>
-                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                      <input type="text"name="b_7cd6b730ca5a735336c7b144c_ef99d45de2" tabindex="-1" value="">
-                    </div>
-                    <div class="clear">
-                      <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"value=&#x279C;>
-                    </div>
+        <div class="newsletter">
+          <p><strong>Sign up for updates</strong></p>
+          <div id="mc_embed_shell">
+            <div id="mc_embed_signup">
+              <form
+                action="https://scaladays.us20.list-manage.com/subscribe/post?u=7cd6b730ca5a735336c7b144c&amp;id=ef99d45de2&amp;f_id=00185feef0"
+                method="post" id="mc-embedded-subscribe-form" 
+                name="mc-embedded-subscribe-form" 
+                class="validate"
+                target="_blank">
+                <div id="mc_embed_signup_scroll">
+                  <div class="mc-field-group">
+                    <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" placeholder="Email Address" value="">
                   </div>
-                </form>
-              </div>
-              <script type="text/javascript" src="assets/js/mc-validate.js"></script>
-              <script type="text/javascript">
-                (function ($) { 
-                  window.fnames = new Array(); 
-                  window.ftypes = new Array(); 
-                  fnames[0] = 'EMAIL'  ; ftypes[0] = 'email'; 
-                  fnames[1] = 'FNAME'  ; ftypes[1] = 'text'; 
-                  fnames[2] = 'LNAME'  ; ftypes[2] = 'text'; 
-                  fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; 
-                  fnames[4] = 'PHONE'  ; ftypes[4] = 'phone'; 
-                  }(jQuery)); 
-                var $mcj = jQuery.noConflict(true);
-              </script>
+                  <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                  </div>
+                  <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                    <input type="text"name="b_7cd6b730ca5a735336c7b144c_ef99d45de2" tabindex="-1" value="">
+                  </div>
+                  <div class="clear">
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"value=&#x279C;>
+                  </div>
+                </div>
+              </form>
             </div>
+            <script type="text/javascript" src="assets/js/mc-validate.js"></script>
+            <script type="text/javascript">
+              (function ($) { 
+                window.fnames = new Array(); 
+                window.ftypes = new Array(); 
+                fnames[0] = 'EMAIL'  ; ftypes[0] = 'email'; 
+                fnames[1] = 'FNAME'  ; ftypes[1] = 'text'; 
+                fnames[2] = 'LNAME'  ; ftypes[2] = 'text'; 
+                fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; 
+                fnames[4] = 'PHONE'  ; ftypes[4] = 'phone'; 
+                }(jQuery)); 
+              var $mcj = jQuery.noConflict(true);
+            </script>
           </div>
         </div>
       </div>
