chore: Call For Proposal is now open :-)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <article class="widget-section fade-in-up">
       <div class="ticket-widget">
         <ul>
+          <li><strong><a href="https://www.papercall.io/scaladays" class="get-in-touch">Call For Proposal Open</a></strong></li>
           <li>Ticket sales open soon</li>
           <li>
             <strong><a href="mailto:info@scaladays.org" class="get-in-touch">Get in touch</a></strong><br/>
