chore: add link for ticket sales

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <article class="widget-section fade-in-up">
       <div class="ticket-widget">
         <ul>
+          <li><strong>
+            <a href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/" class="get-in-touch">Buy your ticket now</a></strong></li>
           <li><strong><a href="https://www.papercall.io/scaladays" class="get-in-touch">Call For Proposal Open</a></strong></li>
-          <li>Ticket sales open soon</li>
           <li>
             <strong><a href="mailto:info@scaladays.org" class="get-in-touch">Get in touch</a></strong><br/>
             for sponsorship<br/>
