task: update assets as per the documentation provided

--- a/the-sponsor.html
+++ b/the-sponsor.html
@@ -28,7 +28,7 @@ permalink: /sponsorships
                   <th class="align-top" style="width: 22%;">
                     <img src="{{ site.baseurl }}/img/assets/icon-platinum.svg" alt="">
                     <h4 class="text-uppercase mb-0 mt-2">Platinum</h4>
-                    <span class="fw-normal mb-3 d-block">10 spots available</span>
+                    <span class="fw-normal mb-3 d-block">3 spots available</span>
                 </th>
                 </tr>
               </thead>
@@ -36,11 +36,11 @@ permalink: /sponsorships
                 <tr>
                   <th scope="row" class="text-start">Complementary Conference Passes</th>
                   <td class="active">2</td>
-                  <td class="active">4</td>
-                  <td class="active">6</td>
+                  <td class="active">3</td>
+                  <td class="active">5</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="text-start">Inclusion in social media communications and press release</th>
+                  <th scope="row" class="text-start">Inclusion in social media communications pre, during, and post conference</th>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
@@ -49,39 +49,39 @@ permalink: /sponsorships
       
               <tbody>
                 <tr>
-                  <th scope="row" class="text-start">Logo in all the videos and digital communication</th>
+                  <th scope="row" class="text-start">Logo on website</th>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                 </tr>
                 <tr>
-                  <th scope="row" class="text-start">Large logo on website and conference banner</th>
+                  <th scope="row" class="text-start">Large logo on conference banner and digital communication (e.g videos)</th>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                 </tr>
                 <tr>
-                  <th scope="row" class="text-start">Booth space in expo hall </th>
+                  <th scope="row" class="text-start">Exhibition booth space</th>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                  <td class="fw-bold active">Medium</td>
-                  <td class="fw-bold active">Large</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="text-start">Track Sponsorship - banner in room</th>
-                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="text-start">Logo visible on recorded video</th>
+                  <th scope="row" class="text-start">Logo on T-shirts and swag bags</th>
+                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="text-start">Standard technical talk, 45min (limited spaces)</th>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                    <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                     <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   </tr>
                   <tr>
-                    <th scope="row" class="text-start">30Sec Company Promo to play during breaks</th>
+                    <th scope="row" class="text-start">Talk will be recorded and published on Scala Days YouTube Channel</th>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                    <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                     <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   </tr>
               </tbody>
