--- a/tickets.html
+++ b/tickets.html
@@ -1,6 +1,6 @@
 ---
 layout: detail-edition
-title: Book your ticket
+title: Join the Scala Community in Lausanne
 permalink: /tickets
 ---
 {% include _nav.html %}
@@ -19,7 +19,7 @@ permalink: /tickets
         <div class="row">
             <div class="col-md-7 mx-auto">
                 <div class="d-flex justify-content-center align-items-center">
-                  <a class="btn btn-primary btn-lg" href="#">Register now</a>
+                  <a class="btn btn-primary btn-lg" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/">Register now</a>
                 </div>
             </div>
           </div>
