--- a/the-sponsor.html
+++ b/the-sponsor.html
@@ -16,28 +16,28 @@ permalink: /sponsorships
                     <h4 class="fs-3 text-start mt-3">Sponsorship <br>Packages</h4>
                 </th>
                   <th class="align-top" style="width: 22%;">
-                    <img src="{{ site.baseurl }}/img/assets/icon-silver.svg" alt="">
-                    <h4 class="text-uppercase mb-0 mt-2">Silver</h4>
-                    <span class="fw-normal mb-3 d-block">-</span>
+                    <img src="{{ site.baseurl }}/img/assets/icon-platinum.svg" alt="">
+                    <h4 class="text-uppercase mb-0 mt-2">Platinum</h4>
+                    <span class="fw-normal mb-3 d-block">3 spots available</span>
                 </th class="align-top">
                   <th style="width: 22%;">
                     <img src="{{ site.baseurl }}/img/assets/icon-gold.svg" alt="">
                     <h4 class="text-uppercase mb-0 mt-2">Gold</h4>
                     <span class="fw-normal mb-3 d-block">10 spots available</span>
                 </th>
-                  <th class="align-top" style="width: 22%;">
-                    <img src="{{ site.baseurl }}/img/assets/icon-platinum.svg" alt="">
-                    <h4 class="text-uppercase mb-0 mt-2">Platinum</h4>
-                    <span class="fw-normal mb-3 d-block">3 spots available</span>
+                 <th class="align-top" style="width: 22%;">
+                    <img src="{{ site.baseurl }}/img/assets/icon-silver.svg" alt="">
+                    <h4 class="text-uppercase mb-0 mt-2">Silver</h4>
+                    <span class="fw-normal mb-3 d-block">-</span>
                 </th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <th scope="row" class="text-start">Complementary Conference Passes</th>
-                  <td class="active">2</td>
-                  <td class="active">3</td>
                   <td class="active">5</td>
+                  <td class="active">3</td>
+                  <td class="active">2</td>
                 </tr>
                 <tr>
                   <th scope="row" class="text-start">Inclusion in social media communications pre, during, and post conference</th>
@@ -56,42 +56,42 @@ permalink: /sponsorships
                 </tr>
                 <tr>
                   <th scope="row" class="text-start">Large logo on conference banner and digital communication (e.g videos)</th>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                 </tr>
                 <tr>
                   <th scope="row" class="text-start">Exhibition booth space</th>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                 </tr>
                 <tr>
                   <th scope="row" class="text-start">Logo on T-shirts and swag bags</th>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                 </tr>
                 <tr>
                     <th scope="row" class="text-start">Standard technical talk, 45min (limited spaces)</th>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   </tr>
                   <tr>
                     <th scope="row" class="text-start">Talk will be recorded and published on Scala Days YouTube Channel</th>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   </tr>
               </tbody>
             </table>
           </div>
           <div class="row">
             <div class="col-md-7 mx-auto">
-                <p class="fs-4 mt-5 text-center">If you are interested in any of our packages or need more information, please contact us:</p>
+                <p class="fs-4 mt-5 text-center">If you are interested in our sponsorship packages and would like more information, please send an email to the Scala Days team using the button below.</p>
                 <div class="d-flex justify-content-center align-items-center">
-                  <a class="btn btn-primary btn-lg" href="https://xebiafunctional.typeform.com/to/hrKQDt9s">Contact us</a>
+                  <a class="btn btn-primary btn-lg" href="mailto:info@scaladays.org">Contact us</a>
                 </div>
             </div>
           </div>
