--- a/the-sponsor.html
+++ b/the-sponsor.html
@@ -13,7 +13,7 @@ permalink: /sponsorships
               <thead>
                 <tr>
                   <th class="align-top" style="width: 34%;">
-                    <h4 class="fs-3 text-start mt-3">Sponsorship <br>Packages</h4>
+                    <h4 class="fs-3 text-start mt-3">Sponsorship Packages</h4>
                 </th>
                   <th class="align-top" style="width: 22%;">
                     <img src="{{ site.baseurl }}/img/assets/icon-platinum.svg" alt="">
