chore: open links in a new tab

--- a/tickets.html
+++ b/tickets.html
@@ -11,15 +11,15 @@ permalink: /tickets
         <div class="column pt-6 mb-8">
             {% for item in site.data.conference.tickets %}
             <div class="col-lg-8 pe-0 pe-lg-5 mb-5 mb-lg-0">
-                <h2 class="mb-4">{{ item.title}}</h2>
-                <p class="lead">{{ item.description}}</p>
+                <h2 class="mb-4">{{ item.title }}</h2>
+                <p class="lead">{{ item.description }}</p>
             </div>
             {% endfor %}
         </div>
         <div class="row">
             <div class="col-md-7 mx-auto">
                 <div class="d-flex justify-content-center align-items-center">
-                  <a class="btn btn-primary btn-lg" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/">Register now</a>
+                  <a class="btn btn-primary btn-lg" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/" target="_blank" rel="noopener noreferrer">Register now</a>
                 </div>
             </div>
           </div>
