--- a/the-sponsor.html
+++ b/the-sponsor.html
@@ -34,10 +34,22 @@ permalink: /sponsorships
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row" class="text-start">Complementary Conference Passes</th>
+                  <th scope="row" class="text-start">Complementary conference passes</th>
                   <td class="active">5</td>
                   <td class="active">3</td>
                   <td class="active">2</td>
+                </tr>
+               <tr>
+                  <th scope="row" class="text-start">Discount on additional full priced passes</th>
+                  <td class="active">25%</td>
+                  <td class="active">15%</td>
+                  <td class="active">7%</td>
+                </tr>
+               <tr>
+                  <th scope="row" class="text-start">Discount on full priced workshop passes</th>
+                  <td class="active">20%</td>
+                  <td class="active">10%</td>
+                  <td class="active">5%</td>
                 </tr>
                 <tr>
                   <th scope="row" class="text-start">Inclusion in social media communications pre, during, and post conference</th>
@@ -55,27 +67,33 @@ permalink: /sponsorships
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                 </tr>
                 <tr>
-                  <th scope="row" class="text-start">Large logo on conference banner and digital communication (e.g videos)</th>
+                  <th scope="row" class="text-start">Large logo on conference banner, digital communication (e.g videos), T-shirts, and swag bags</th>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="text-start">Brand a major social activity</th>
+                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                 </tr>
                 <tr>
                   <th scope="row" class="text-start">Exhibition booth space</th>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                </tr>
-                <tr>
-                  <th scope="row" class="text-start">Logo on T-shirts and swag bags</th>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                  <td class="align-middle active">Double</td>
+                  <td class="align-middle active">Single</td>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                 </tr>
                 <tr>
                     <th scope="row" class="text-start">Standard technical talk, 45min (limited spaces)</th>
                     <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                     <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                    <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start">Lead a panel (keynote slot) or additional technical talk</th>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                    <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                   </tr>
                   <tr>
