task: add sponsorship text

--- a/the-sponsor.html
+++ b/the-sponsor.html
@@ -7,7 +7,19 @@ permalink: /sponsorships
 {% include _hero-sponsor-editions.html %}
 <section id="the-sponsor" class="py-5">
     <div class="container py-0 py-lg-5">
-       
+        <div class="mb-5">
+          <p class="fs-4" style="text-indent: 1em;">
+              At Scala Days, it’s our goal to showcase as many companies using Scala and within the Scala ecosystem as possible at the conference alongside hundreds of local attendees and top Scala experts from around the world.
+              By becoming a sponsor, you have a unique opportunity to position your brand at the forefront of innovation while supporting a vibrant and inclusive community.
+              With a range of flexible sponsorship options, you’ll have the chance to create lasting connections, showcase your brand, and contribute to the growth of the Scala ecosystem.
+          </p>
+          <p class="fs-4" style="text-indent: 1em;">
+              As well as the snapshot of sponsorship options below, we offer additional opportunities including the sponsorship of scholarships, colocated events, onsite daycare, and more!
+          </p>
+        </div>
+        
+        <hr class="my-5">
+
         <div class="table-responsive">
             <table class="table text-center">
               <thead>
@@ -72,12 +84,6 @@ permalink: /sponsorships
                   <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                   <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                 </tr>
-                 <tr>
-                  <th scope="row" class="text-start">Brand a major social activity</th>
-                  <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                  <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
-                </tr>
                 <tr>
                   <th scope="row" class="text-start">Exhibition booth space</th>
                   <td class="align-middle active">Double</td>
@@ -91,15 +97,21 @@ permalink: /sponsorships
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                   </tr>
                   <tr>
+                    <th scope="row" class="text-start">Talk will be recorded and published on Scala Days YouTube Channel</th>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                    <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
+                  </tr>
+                  <tr>
                     <th scope="row" class="text-start">Lead a panel (keynote slot) or additional technical talk</th>
                     <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                   </tr>
                   <tr>
-                    <th scope="row" class="text-start">Talk will be recorded and published on Scala Days YouTube Channel</th>
+                    <th scope="row" class="text-start">Brand a major social activity</th>
                     <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
-                    <td class="align-middle active"><img src="{{ site.baseurl }}/img/assets/icon-check.svg" alt=""></td>
+                    <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                     <td class="align-middle"><img src="{{ site.baseurl }}/img/assets/icon-empty.svg" alt=""></td>
                   </tr>
               </tbody>
