--- a/schedule.html
+++ b/schedule.html
@@ -25,6 +25,9 @@ permalink: schedule
     </div>
     <div class="row">
       <div class="col-12">
+        <div class="alert alert-info" role="alert">
+          <small><i class="bi bi-info-circle me-2"></i>Please note that the schedule is subject to change. We recommend checking back regularly for updates.</small>
+        </div>
         <div class="tab-content" id="nav-tabContent">
           {% for day in site.data.schedule.days %}
           <div class="tab-pane fade {% if forloop.first %} show active {% endif %}" id="{{day.id}}" role="tabpanel" aria-labelledby="{{day.id}}-list">
