--- a/schedule.html
+++ b/schedule.html
@@ -28,6 +28,9 @@ permalink: schedule
         <div class="alert alert-info text-center" role="alert">
           <small><i class="bi bi-info-circle me-2"></i>Please note that the schedule is subject to change. We recommend checking back regularly for updates.</small>
         </div>
+        <div class="d-flex justify-content-center mt-2">
+          <a class="btn btn-primary btn-lg px-4 gap-3" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/" target="_blank" rel="noopener noreferrer">Buy Ticket Now</a>
+        </div>
         <div class="tab-content" id="nav-tabContent">
           {% for day in site.data.schedule.days %}
           <div class="tab-pane fade {% if forloop.first %} show active {% endif %}" id="{{day.id}}" role="tabpanel" aria-labelledby="{{day.id}}-list">
