--- a/schedule.html
+++ b/schedule.html
@@ -62,6 +62,7 @@ permalink: schedule
                   {% endif %}
                 </div>
                 {% else %}
+                {% if talk.url %}
                 <a class="item-schedule border d-block text-decoration-none text-dark" href="{{ talk.url | relative_url }}">
                   <span class="badge fs-6 bg-secondary pl-4">{{ talk.time }}</span>
                   <h5 class="talk-title mb-2">{{ talk.title }}</h5>
@@ -72,6 +73,18 @@ permalink: schedule
                   <p class="mb-0">{{ talk.speaker2 }}</p>
                   {% endif %}
                 </a>
+                {% else %}
+                <div class="item-schedule border d-block text-decoration-none text-dark">
+                  <span class="badge fs-6 bg-secondary pl-4">{{ talk.time }}</span>
+                  <h5 class="talk-title mb-2">{{ talk.title }}</h5>
+                  {% if talk.speaker %}
+                  <p class="mb-0">{{ talk.speaker }}</p>
+                  {% endif %}
+                  {% if talk.speaker2 %}
+                  <p class="mb-0">{{ talk.speaker2 }}</p>
+                  {% endif %}
+                </div>
+                {% endif %}
                 {% endif %}
                 {% endfor %}
               </div>
