Add sponsors hero section to multiple pages

--- a/schedule.html
+++ b/schedule.html
@@ -3,6 +3,7 @@ layout: schedule
 title: 2025 Schedule
 permalink: schedule
 ---
+{% include _sponsors-hero.html %}
 
 <div class="schedule-list py-5">
   <div class="container">
