--- a/tickets.html
+++ b/tickets.html
@@ -5,6 +5,7 @@ permalink: /tickets
 ---
 {% include _nav.html %}
 {% include _hero-tickets.html %}
+{% include _sponsors-hero.html %}
 {% include _pricetable.html %}
 <section id="tickets" class="py-5">
     <div class="container py-0 py-lg-5">
