--- a/workshops-list.html
+++ b/workshops-list.html
@@ -3,6 +3,7 @@ layout: workshops
 title: Workshops
 permalink: workshops
 ---
+{% include _sponsors-hero.html %}
 
 <section id="workshops">
     {% include _pricetable-workshops.html %}
